# semantic-kernel-sampler

./: .dockerignore  .env.development  .env.docker.windows  .env.local.windows.example  .env.localhost  .gitignore  .gitlinks  .gitmodules  .prettierignore  Dockerfile  HISTORY.md  LICENSE  LICENSE.md  README.md  SemanticKernelSampler.DotNet.WebApp.sln  bower.json  docker-compose.yml  jest.config.js  package-lock.json  package-lock_json  package.json  package_json  requirements.frozen.txt
python/: Dockerfile  pyproject.toml  requirements.min.txt  requirements.pipx.txt  test-results.xml
python/agent-framework-py/: poe_tasks.toml  pyproject.toml  requirements.frozen.txt
python/agent-framework-py/scripts/: setup.ba.sh
python/agent-framework-sampler-py/: .dockerignore  .env.ai.gpt-4o.local.example  .env.local.example  .gitignore  .python-versions  Dockerfile  README.md  main.py  poe_tasks.toml  pyproject.toml  requirements.frozen.txt  requirements.uv.tool.txt
python/agent-framework-sampler-py/config/: logging.conf
python/agent-framework-sampler-py/scripts/: ci.ba.sh
python/agent-framework-sampler-py/scripts/uv/tool/: install.ba.sh
python/agent-framework-sampler-py/src/agent_framework_sampler/: __main__.py
python/agent-framework-sampler-py/src/agent_framework_sampler/a2a/cards/: mixin.py
python/agent-framework-sampler-py/src/agent_framework_sampler/cli/chat_agent/: azure_ai_with_function_tools.py  ms_learn_mcp.py  weather.py
python/agent-framework-sampler-py/src/agent_framework_sampler/cli/workflows/: concurrent_basic.py
python/agent-framework-sampler-py/src/agent_framework_sampler/config/: configuration.py  logs.py  mixin.py
python/agent-framework-sampler-py/src/agent_framework_sampler/config/os_environ/: settings.py  utils.py
python/agent-framework-sampler-py/src/agent_framework_sampler/dependency_injection/: container.py
python/ai-evaluator-py/: .env.ai.gpt-4o-mini.local.example  .env.ai.project.local.example  .env.local.example  .gitignore  README.md  poe_tasks.toml  pyproject.toml  requirements.frozen.txt  ruff.toml
python/ai-evaluator-py/assets/examples/01_turn_on_the_light/01_ground_truth_jsons/: 01.json5  02.json5  03.json5
python/ai-evaluator-py/assets/examples/01_turn_on_the_light/02_ground_truth_jsonl/: turns.jsonl
python/ai-evaluator-py/config/: logging.conf
python/ai-evaluator-py/data/evaluations/01_turn_on_the_light/01_ground_truth_jsons/: 03.json5
python/ai-evaluator-py/scripts/: install.ba.sh
python/ai-evaluator-py/scripts/pip/: upgrade.ba.sh
python/ai-evaluator-py/src/ai_evaluator/: __main__.py  main.py
python/ai-evaluator-py/src/ai_evaluator/configuration/: config.py  logs.py
python/ai-evaluator-py/src/ai_evaluator/configuration/os_environ/: azure_ai_project.py  azure_openai.py  settings.py  utils.py
python/ai-evaluator-py/src/ai_evaluator/dependency_injection/: container.py
python/ai-evaluator-py/src/ai_evaluator/models/conversation/: conversation.py  dataset_entry_protocol.py  message_protocol.py
python/ai-evaluator-py/src/ai_evaluator/models/single_turn/: ground_truth_entry_protocol.py  (+2 more)
python/ai-evaluator-py/src/ai_evaluator/utils/: lodash.py
python/evaluator-py/scripts/pip/: install.ba.sh
python/pipelines/: README.md  dev.yaml  qa.yaml  style.yaml
python/scripts/: setup.ba.sh
python/scripts/pip/: install.ba.sh  setup.ba.sh  upgrade.ba.sh
python/scripts/poetry/plugin/: add.ba.sh
python/semantic-kernel-sampler-py/: .dockerignore  .env  .env.ai.gpt-4o.local.example  .env.ai.gpt.4o.local.example  .env.local.example  .gitignore  .pylintrc  Dockerfile  README.md  main.py  pyproject.toml  pypyr-config.yaml  pytest.ini  requirements.all.txt  requirements.frozen.txt  requirements.pipx.txt  requirements.poetry-plugin.txt  requirements.poetry.cli.txt  requirements.poetry.dev.txt  requirements.poetry.main.txt  requirements.release.txt  requirements.txt  requirements.uv.tool.txt  ruff.toml  scripts  test-results.xml
python/semantic-kernel-sampler-py/config/: logging.conf
python/semantic-kernel-sampler-py/pipelines/: TODO.md  build.yaml  ci.yaml  clean.yaml  lint.yaml  lock.yaml  qa.yaml  style.yaml  sync.yaml  test.yaml
python/semantic-kernel-sampler-py/rest/messages/POST/: what_time_is_it.http
python/semantic-kernel-sampler-py/scripts/: ci.ba.sh  install.ba.sh  setup.ba.sh
python/semantic-kernel-sampler-py/scripts/pip/: freeze.ba.sh  upgrade.ba.sh
python/semantic-kernel-sampler-py/scripts/pipx/: install.ba.sh
python/semantic-kernel-sampler-py/scripts/poetry/plugin/: add.ba.sh
python/semantic-kernel-sampler-py/scripts/uv/: build.ba.sh  sync.ba.sh
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/: __main__.py  agent_executor.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/a2a/: executor.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/agents/: base.py  light.py  math.py  protocol.py  typescript_sdk__quick_start.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/cli/: agent_with_http_mcp_plugin.as-is.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/configuration/: config.py  mixin.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/dependency_injection/: container.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/executor/: base.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/plugins/: light.py  protocol.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/rest/: __main__.py
python/semantic-kernel-sampler-py/src/semantic_kernel_sampler/utils/: lodash.py
python/semantic-kernel-sampler-py/tests/: test_basic.py
python/semantic-kernel-sampler-py/tests/rest/models/: test__request.py  test__response.py
python/semantic-kernel-sampler-py/typings/hamcrest/: __init__.pyi
python/semantic-kernel-sampler-py/typings/hamcrest/core/: __init__.pyi  assert_that.pyi  base_description.pyi  base_matcher.pyi  description.pyi  matcher.pyi  selfdescribing.pyi  selfdescribingvalue.pyi  string_description.pyi
python/src/semantic-kernel-sampler/: __main__.py
(+472 files in other folders)
