[tool.poetry]
name = "semantic-kernel-sampler-python"
version = "0.1.0"
description = "semantic-kernel sampler"
authors = ["percebus <some@email.com>"]
license = "SEE LICENSE IN LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pyclean = "^3.0.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
pyhamcrest = "^2.1.0"
pylint = "^3.3.2"
pypyr = "^5.9.1"
pyright = "^1.1.391"
pytest = "^8.3.4"
pytest-bdd = "^8.1.0"
pytest-cov = "^6.0.0"
pytest-dotenv = "^0.5.2"
ruff = "^0.8.4"

[tool.pyright]
venvPath = "."
venv = ".venv"
defineConstant = { DEBUG = true }
typeCheckingMode = "strict"
include = ["src"]
strict = ["src"]
# stubPath = "src/stubs" # TODO?
# ignore = ["src/oldstuff"] # NOTE what is the difference between exclude and ignore?
exclude = [
    ".venv",
    "typings",
    "**/__pycache__",
    "**/test*.py",
]

[tool.coverage.run]
omit = [
    # "**/tests/**",
]

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
