[project]
name = "agent-framework-sampler-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.6,<4.0.0"
dependencies = [
    "agent-framework==1.0.0b251007",
    "lagom>=2.7.7,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "pydantic>=2.12.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-dotenv>=0.5.2,<0.6.0",
    "pytest>=8.4.2,<9.0.0",
]
cli = [
    "pyright>=1.1.406,<2.0.0",
    "ruff>=0.14.0,<0.15.0",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
defineConstant = { DEBUG = true }
typeCheckingMode = "strict"
include = ["src"]
strict = ["src"]
# stubPath = "src/stubs" # TODO?
# ignore = ["src/oldstuff"] # NOTE what is the difference between exclude and ignore?
exclude = [
    ".venv",
    "typings",
    "**/__pycache__",
    "**/test*.py",
    "**/*.as-is.py"
]

[tool.coverage.run]
omit = [
    "**/i_*.py",
    "**/protocol.py",
    "**/tests/**",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agent_framework_sampler"
]
