[project]
name = "semantic-kernel-sampler-py"
version = "0.1.0"
description = "semantic-kernel sampler"
authors = [
    {name = "JCystems"}
]
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pydantic (>=2.10.4,<3.0.0)",
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "semantic-kernel (==0.4.6.dev0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pyhamcrest = "^2.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.cli.dependencies]
pylint = "^3.3.2"
pyright = "^1.1.391"
ruff = "^0.8.4"

[tool.pyright]
venvPath = "."
venv = ".venv"
defineConstant = { DEBUG = true }
typeCheckingMode = "strict"
include = ["src"]
strict = ["src"]
# stubPath = "src/stubs" # TODO?
# ignore = ["src/oldstuff"] # NOTE what is the difference between exclude and ignore?
exclude = [
    ".venv",
    "typings",
    "**/__pycache__",
    "**/test*.py",
]

[tool.coverage.run]
omit = [
    # "**/tests/**",
]

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
