[project]
name = "semantic-kernel-sampler-py"
version = "0.1.0"
readme = "README.md"
description = "semantic-kernel sampler"
authors = [
    {name = "JCystems"}
]
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pydantic (>=2.10.4,<3.0.0)",
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "semantic-kernel (==0.4.6.dev0)",
]

[project.optional-dependencies]
dev = [
    "pyhamcrest>=2.1.0",
    "pytest-cov>=6.2.1",
    "pytest-dotenv>=0.5.2",
    "pytest>=8.4.1",
]
cli = [
    "pylint>=3.3.8",
    "pyright>=1.1.403",
    "ruff>=0.12.8",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
defineConstant = { DEBUG = true }
typeCheckingMode = "strict"
include = ["src"]
strict = ["src"]
# stubPath = "src/stubs" # TODO?
# ignore = ["src/oldstuff"] # NOTE what is the difference between exclude and ignore?
exclude = [
    ".venv",
    "typings",
    "**/__pycache__",
    "**/test*.py",
]

[tool.coverage.run]
omit = [
    "**/tests/**",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/semantic_kernel_sampler"
]
